--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -107,7 +107,7 @@ main {
     }
     .container-blue-icon {
         background-color: #0282f9;
-        height: 7rem;
+        height: 9rem;
         color: white;
         font-size: 0.7rem;
         .icons {
@@ -143,6 +143,7 @@ main {
             cursor: pointer;
         }
         .card-name {
+            text-transform: uppercase;
             font-size: 0.5em;
             color: white;
             padding-top: 0.5rem;
